--- a/suvubuild3.html
+++ b/suvubuild3.html
@@ -116,7 +116,7 @@
 <body class="min-h-screen bg-gradient-to-br from-pink-50 via-pink-100 to-love-light dark:from-pink-900 dark:via-pink-800 dark:to-pink-700 transition-colors duration-300">
      
     <audio controls autoplay loop>
-  <source src="https://github.com/Xaniyat/giftforsuvu/blob/bba03a4fac21b0d7e2d2c65e760b289d464416d5/The%20Greatest%20Showman%20-%20Rewrite%20the%20Stars%20(Piano%20Cover%20by%20Riyandi%20Kusuma).mp3" type="audio/mp3">
+  <source src="/The%20Greatest%20Showman%20-%20Rewrite%20the%20Stars%20(Piano%20Cover%20by%20Riyandi%20Kusuma).mp3" type="audio/mp3">
   Your browser does not support the audio element.
    </audio>
     <!-- Color scheme detection -->
