--- a/suvubuild3.html
+++ b/suvubuild3.html
@@ -115,10 +115,9 @@
 </head>
 <body class="min-h-screen bg-gradient-to-br from-pink-50 via-pink-100 to-love-light dark:from-pink-900 dark:via-pink-800 dark:to-pink-700 transition-colors duration-300">
      
-    <audio controls autoplay loop>
-  <source src="/The%20Greatest%20Showman%20-%20Rewrite%20the%20Stars%20(Piano%20Cover%20by%20Riyandi%20Kusuma).mp3" type="audio/mp3">
-  Your browser does not support the audio element.
-   </audio>
+   <audio id="bg-music" autoplay loop hidden>
+        <source src="/The%20Greatest%20Showman%20-%20Rewrite%20the%20Stars%20(Piano%20Cover%20by%20Riyandi%20Kusuma).mp3" type="audio/mp3">
+    </audio>
     <!-- Color scheme detection -->
     <script>
         if (window.matchMedia && window.matchMedia('(prefers-color-scheme: dark)').matches) {
